# irata2

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  design.md  plan.md
asm/: CMakeLists.txt  README.md  example_usage.cpp  generate_isa.py
asm/test/: CMakeLists.txt  isa_test.cpp
assembler/: CMakeLists.txt  README.md  debug_schema.json
assembler/include/irata2/assembler/: assembler.h  ast.h  cartridge.h  error.h  include_processor.h  lexer.h  parser.h  span.h  token.h
assembler/src/: assembler.cpp  cartridge.cpp  include_processor.cpp  lexer.cpp  main.cpp  parser.cpp
assembler/test/: CMakeLists.txt  assembler_test.cpp  demo_programs_test.cpp  graphics_test_helpers.cpp  graphics_test_helpers.h  integration_test_helpers.h
assembler/test/integration/: absolute_test.cpp  arithmetic_immediate_test.cpp  asteroids_modules_test.cpp  branch_test.cpp  graphics_test.cpp  inc_dec_test.cpp  load_immediate_test.cpp  logic_immediate_test.cpp  register_transfer_test.cpp  shift_accumulator_test.cpp  system_test.cpp  zero_page_indexed_test.cpp  zero_page_test.cpp
base/: CMakeLists.txt  README.md
base/include/irata2/base/: log.h  tick_phase.h  types.h
base/test/: CMakeLists.txt  byte_test.cpp  log_test.cpp  tick_phase_test.cpp  word_test.cpp
frontend/: CMakeLists.txt
frontend/include/irata2/frontend/: demo_runner.h  sdl_backend.h
frontend/src/: demo_runner.cpp  main.cpp  sdl_backend.cpp
hdl/: CMakeLists.txt  README.md
hdl/include/irata2/: hdl.h
hdl/include/irata2/hdl/: alu.h  bus.h  byte_bus.h  byte_counter.h  byte_register.h  component.h  component_base.h  component_with_bus.h  component_with_parent.h  control.h  control_base.h  control_info.h  controller.h  counter.h  cpu.h  latched_control.h  latched_word_register.h  local_counter.h  local_register.h  memory.h  memory_address_register.h  process_control.h  program_counter.h  read_control.h  register.h  status.h  status_analyzer.h  status_register.h  traits.h  word_bus.h  word_register.h  write_control.h
hdl/src/: bus.cpp  byte_bus.cpp  byte_counter.cpp  byte_register.cpp  component.cpp  component_base.cpp  component_with_bus.cpp  component_with_parent.cpp  control.cpp  controller.cpp  counter.cpp  cpu.cpp  process_control.cpp  read_control.cpp  register.cpp  status.cpp  word_bus.cpp  word_register.cpp  write_control.cpp
hdl/test/: CMakeLists.txt  bus_test.cpp  byte_bus_test.cpp  byte_counter_test.cpp  byte_register_test.cpp  component_base_test.cpp  component_test.cpp  component_with_bus_test.cpp  component_with_parent_test.cpp  control_test.cpp  counter_test.cpp  cpu_test.cpp  latched_control_test.cpp  process_control_test.cpp  read_control_test.cpp  register_test.cpp  status_bit_test.cpp  traits_test.cpp  word_bus_test.cpp  word_register_test.cpp  write_control_test.cpp
isa/: CMakeLists.txt  README.md  example_usage.cpp  generate_isa.py  instructions.yaml
isa/test/: CMakeLists.txt  isa_test.cpp
microcode/: CMakeLists.txt  README.md  generate_microcode.py  microcode.yaml
microcode/include/irata2/microcode/: error.h
microcode/include/irata2/microcode/compiler/: bus_validator.h  compiler.h  control_conflict_validator.h  duplicate_step_optimizer.h  pass.h  (+10 more)
microcode/src/: microcode_dump_main.cpp
microcode/src/compiler/: bus_validator.cpp  compiler.cpp  control_conflict_validator.cpp  duplicate_step_optimizer.cpp  empty_step_optimizer.cpp  fetch_transformer.cpp  fetch_validator.cpp  isa_coverage_validator.cpp  phase_ordering_validator.cpp  sequence_transformer.cpp  sequence_validator.cpp  stage_validator.cpp  status_validator.cpp  step_merging_optimizer.cpp
microcode/src/debug/: decoder.cpp
microcode/src/encoder/: control_encoder.cpp  instruction_encoder.cpp  status_encoder.cpp
microcode/src/ir/: builder.cpp  cpu_path_resolver.cpp
microcode/test/: CMakeLists.txt  builder_test.cpp  bus_validator_test.cpp  compiler_conflict_test.cpp  compiler_test.cpp  control_conflict_validator_test.cpp  control_encoder_test.cpp  cpu_path_resolver_test.cpp  decoder_test.cpp  duplicate_step_optimizer_test.cpp  empty_step_optimizer_test.cpp  fetch_transformer_test.cpp  fetch_validator_test.cpp  instruction_encoder_test.cpp  isa_coverage_validator_test.cpp  phase_ordering_validator_test.cpp  sequence_transformer_test.cpp  sequence_validator_test.cpp  stage_validator_test.cpp  status_encoder_test.cpp  status_validator_test.cpp  step_merging_optimizer_test.cpp
sim/: CMakeLists.txt  README.md
sim/alu/: README.md
sim/bench/: bench_main.cpp
sim/include/irata2/: sim.h
sim/include/irata2/sim/: alu.h  bus.h  byte_bus.h  byte_register.h  cartridge.h  component.h  component_with_bus.h  control.h  controller.h  counter.h  cpu.h  debug_dump.h  debug_symbols.h  debug_trace.h  disassembler.h  error.h  initialization.h  instruction_register.h  latched_word_register.h  local_counter.h  local_register.h  program_counter.h  read_control.h  register.h  register_base.h  register_with_bus.h  rom_storage.h  status.h  status_register.h  word_bus.h  word_counter.h  word_register.h  write_control.h
sim/memory/: README.md
sim/src/: alu.cpp  cart_inspect.cpp  cartridge.cpp  controller.cpp  cpu.cpp  cpu_debug_symbols.cpp  debug_dump.cpp  debug_symbols.cpp  disasm_main.cpp  disassembler.cpp  initialization.cpp  run.cpp  status.cpp
sim/src/alu/: alu.cpp
sim/src/controller/: control_encoder.cpp  controller.cpp  instruction_memory.cpp  status_encoder.cpp
sim/src/io/: input_device.cpp  vector_graphics_coprocessor.cpp  vgc_backend.cpp
sim/src/memory/: memory.cpp  memory_address_register.cpp  module.cpp  region.cpp
sim/test/: CMakeLists.txt  alu_test.cpp  bus_test.cpp  component_test.cpp  control_test.cpp  controller_test.cpp  counter_test.cpp  cpu_debug_test.cpp  cpu_test.cpp  debug_dump_test.cpp  debug_symbols_test.cpp  debug_trace_test.cpp  disassembler_test.cpp  initialization_test.cpp  input_device_integration_test.cpp  input_device_test.cpp  instruction_register_test.cpp  irq_integration_test.cpp  memory_test.cpp  register_test.cpp  status_test.cpp  test_helpers.h  vgc_backend_test.cpp  vgc_integration_test.cpp
(+139 files in other folders)
